2008-10-10  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Inner extra sorting in DISTINCT ON selects removed.

2008-10-10  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	* lib/pytis/data/postgresql.py:
	Typo in SELECT DISTINCT ON fixed.

2008-10-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	SQL string escaping updated to current standards.

2008-10-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	* lib/pytis/data/postgresql.py:
	DISTINCT ON SQL clauses adjusted to allow arbitrary ordering.

2008-10-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	* lib/pytis/data/dbdata.py:
	* lib/pytis/data/postgresql.py:
	Limited support for DISTINCT ON SQL clauses.

2008-10-08  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	* lib/pytis/data/pgsql.py:
	* lib/pytis/data/postgresql.py:
	Ensure listening db loops won't start before their connection is initialized.

2008-10-08  Pavel Hanak  <hanak@asellus.cz>

	* pytis/output/formatter.py: Corrected indentation error.

2008-10-02  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	* lib/pytis/data/data.py:
	* lib/pytis/data/postgresql.py:
	* lib/pytis/data/types_.py:
	Database full text search support.

2008-10-02  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/util/util.py:
	Missing NotImplementedException class added.

2008-10-02  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	* lib/pytis/data/pgsql.py:
	* lib/pytis/data/postgresql.py:
	Quote PostgreSQL notification names.

2008-09-30  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/__init__.py: 
	* pytis/web/form.py: 
	Added search string UI controls.

2008-09-25  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py: 
	* pytis/web/form.py: 
	Allow multiple `ListLayout' `content' fields.  Add field id CSS
	classes to all layout fields.

	* pytis/data/types_.py: 
	* pytis/form/inputfield.py: 